front : fix z-index in icon

--- a/src/sass/pages/_Inventory.scss
+++ b/src/sass/pages/_Inventory.scss
@@ -73,7 +73,7 @@
   max-height: 3rem;
   max-width: 3rem;
   padding: 0.5rem;
-  z-index: 10;
+  z-index: 1;
 }
 
 .inventory__toolbox__searchIcon:hover {
